--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             </intent-filter>
             -->
         </activity>
+        <activity android:name=".yelpdata.YelpActivity"></activity>
     </application>
 
 </manifest>
